--- a/20240925.md
+++ b/20240925.md
@@ -1,6 +1,6 @@
 # 1. Gestión de procesos en Java - ProcessBuilder y Process
 
-## 1.2 Preparación y configuración de un proceso
+## Preparación y configuración de un proceso
 
 ### Modificar el comando en tiempo de ejecución
 ### Configuraciones adicionales de un proceso
