--- a/20240925.md
+++ b/20240925.md
@@ -9,7 +9,7 @@
 
 ## Información de los procesos en Java
 
-### 2.2.1 Preparación y configuración de un proceso
+### Preparación y configuración de un proceso
 
 En el paquete `java.lang` tenemos dos clases para la gestión de procesos:
 
