--- a/20240925.md
+++ b/20240925.md
@@ -65,7 +65,7 @@ Podemos usar como parámetros `-s` para apagar, `-r` para reiniciar, `-h` para h
 
 Referencia del comando shutdown de Windows.
 
-#### **Actividad:** psp.activities.U2A1_Shutdowner
+#### **Actividad:** actividad 1
 
 Crea un nuevo proyecto Java. Usando la línea de comandos, pide al usuario qué acción quiere realizar (apagar, reiniciar o suspender) y cuánto tiempo dejar antes de realizar la acción de apagado. Debe funcionar tanto en Windows como en Linux.
 
@@ -108,7 +108,7 @@ environment.replace("path", systemPath);
 environment.put("GREETING", "Hola Mundo");
 ```
 
-#### **Actividad:** psp.activities.U2A2_DirectorioTrabajo
+#### **Actividad:** actividad 2
 
 Crea un proyecto Java que ejecute el comando `ls` o `dir`, modifique el valor de la propiedad `user.dir`, y cambie el directorio de trabajo dependiendo del sistema operativo.
 
@@ -118,7 +118,7 @@ Crea un proyecto Java que ejecute el comando `ls` o `dir`, modifique el valor de
 
 La clase `Process` es abstracta y contiene la información del proceso en ejecución.
 
-#### **Actividad:** psp.activities.U2A3_ExitValue
+#### **Actividad:** actividad 3
 
 Crea un proyecto Java que ejecute varios comandos y obtenga el código de finalización de cada uno.
 
