--- a/20240925.md
+++ b/20240925.md
@@ -106,6 +106,23 @@ Map<String, String> environment = pbuilder.environment();
 String systemPath = environment.get("path") + ";c:/users/public";
 environment.replace("path", systemPath);
 environment.put("GREETING", "Hola Mundo");
+processBuilder.command("/bin/bash", "-c", "echo $GREETING");
+
+
+// Indicamos el directorio donde se encuentra el ejecutable
+File directorio = new File ("bin");
+pb.directory(directorio);
+
+// Mostramos la información de las variables de entorno
+Map variablesEntorno = pb.environment();
+System.out.println(variablesEntorno);
+
+// Mostramos el nombre del proceso y sus argumentos
+List command = pb.command();
+Iterator iter = l.iterator();
+while (iter.hasNext()) {
+    System.out.println(iter.next());
+}
 ```
 
 #### **Actividad:** actividad 2
@@ -146,4 +163,39 @@ También podemos obtener información del proceso hijo:
 Process process = processBuilder.inheritIO().start();
 ProcessHandle childProcessHandle = process.toHandle();
 ProcessHandle.Info childProcessInfo = childProcessHandle.info();
+```
+
+## Acceso a un proceso en ejecución
+
+* int exitValue()	Código de finalización devuelto por el proceso hijo (ver Info más abajo)
+* Boolean isAlive()	Comprueba si el proceso todavía está en ejecución
+* int waitFor()	hace que el proceso padre se quede esperando a que el proceso hijo termine. El entrono que devuelve es el código de finalización del proceso hijo
+* Boolean waitFor(long timeOut, TimeUnit unit)	El funcionamiento es el mismo que en el caos anterior sólo que en esta ocasión podemos especificar cuánto tiempo queremos esperar a que el proceso hijo termine. El método devuelve true si el proceso termina antes de que pase el tiempo indicado y false si ha pasado el tiempo y el proceso no ha terminado.
+* void destroy()	Estos dos métodos se utilizan para matar al proceso. El segundo lo hace de forma forzosa.
+Process destroyForcibly()
+
+```java
+public class ProcessDemo {
+
+   public static void main(String[] args) throws Exception {
+
+      ProcessBuilder pb = new ProcessBuilder("C:/Program Files (x86)/Notepad++/notepad++.exe");
+      // Effectively launch the process
+      Process p = pb.start();
+      // Check is process is alive or not
+      boolean alive = p.isAlive();
+      // Wait for the process to end for 10 seconds.
+      if (p.waitFor(10, TimeUnit.SECONDS)) {
+          System.out.println("Process has finished");
+      } else {
+          System.out.println("Timeout. Process hasn't finished");
+      }
+      // Force process termination.
+      p.destroy();
+      // Check again if process remains alive
+      alive = p.isAlive();
+      // Get the process exit value
+      int status = p.exitValue();        
+   }
+}
 ```
