--- a/20240925.md
+++ b/20240925.md
@@ -199,3 +199,6 @@ public class ProcessDemo {
    }
 }
 ```
+
+#### Tarea: Crea un nuevo proyecto Java (Ant > Java Application) (configura como nombre del proyecto U2A3_ExitValue y como clase principal psp.activities.U2A3_ExitValue). Prepara un programa que ejecute varios comandos (notepad, calc, comandos shell) uno detrás de otro, de forma secuencial y haz que tu programa obtenga el código de finalización de cada uno de ellos. Para cada programa imprime el nombre y su código de finalización.
+
