--- a/20240925.md
+++ b/20240925.md
@@ -57,6 +57,9 @@ String command3 = "c:/windows/system32/shutdown -s -t 0";
 ProcessBuilder pb = new ProcessBuilder(command3.split("\s"));
 ```
 
+#### Ejercicio: Crea un programa que ejecute un comando básico del sistema operativo (diferentes a los ejemplos que hay puestos en tutorial)
+Captura y muestra la salida estándar del comando.
+
 ### Apagar el sistema operativo
 
 El comando `shutdown -s` apaga el sistema. En Windows, es necesario proporcionar la ruta completa al comando, por ejemplo `C:\Windows\System32\shutdown`.
@@ -157,6 +160,13 @@ System.out.println("Total CPU duration: " + processInfo.totalCpuDuration());
 System.out.println("User: " + processInfo.user());
 ```
 
+#### Ejercicio: Escribe un programa que inicie varios procesos (por ejemplo, notepad, calc, o un comando shell) y luego imprima la siguiente información para cada proceso:
+* PID
+* Comando ejecutado
+* Usuario que lo ejecuta
+* Duración total de CPU utilizada por el proceso
+
+
 También podemos obtener información del proceso hijo:
 
 ```java
@@ -200,5 +210,5 @@ public class ProcessDemo {
 }
 ```
 
-#### Tarea: Crea un nuevo proyecto Java (Ant > Java Application) (configura como nombre del proyecto U2A3_ExitValue y como clase principal psp.activities.U2A3_ExitValue). Prepara un programa que ejecute varios comandos (notepad, calc, comandos shell) uno detrás de otro, de forma secuencial y haz que tu programa obtenga el código de finalización de cada uno de ellos. Para cada programa imprime el nombre y su código de finalización.
+#### Tarea: Prepara un programa que ejecute varios comandos (notepad, calc, comandos shell) uno detrás de otro, de forma secuencial y haz que tu programa obtenga el código de finalización de cada uno de ellos. Para cada programa imprime el nombre y su código de finalización.
 
