--- a/20240926.md
+++ b/20240926.md
@@ -55,6 +55,7 @@ public class ProcessBuilderExample3 {
 
 Ahora prueba el siguiente código ¿qué diferencias hay con el anterior?
 
+```java
 import java.util.concurrent.TimeUnit;
 
 public class esperapr {
