--- a/20240926.md
+++ b/20240926.md
@@ -3,6 +3,43 @@
 Mientras llego a las clases id ejecutando el siguiente código y contestando a las preguntas.
 Muchas gracias.
 
+**Acuerdate que la clase de java tiene que tener el mismo nombre que el del fichero**
+
+En la clase de ayer nos quedamos sacando información de los procesos
+
+```java
+import java.util.Optional;
+
+public class ejemplo1 {
+
+        
+    public static void main (String [] args) {
+        try {
+            ProcessBuilder pb = new ProcessBuilder("notepad.exe");
+            Process p = pb.start();
+        
+
+            Optional<ProcessHandle> p2= ProcessHandle.of(p.pid());
+            ProcessHandle ph = p2.orElseThrow();
+            ProcessHandle.Info processInfo = ph.info();
+
+                System.out.println("PID: " + ph.pid());
+                System.out.println("Arguments: " + processInfo.arguments());
+                System.out.println("Command: " + processInfo.command());
+                System.out.println("Instant: " + processInfo.startInstant());
+                System.out.println("Total CPU duration: " + processInfo.totalCpuDuration());
+                System.out.println("User: " + processInfo.user());
+            
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+    }
+       
+
+}
+```
+
 ### Ejecuta el siguiente código:
 ```java
 
@@ -87,3 +124,39 @@ public class esperapr {
     }
 }
 ```
+
+y ahora ejectua el siguiente: Qué salida te sale, qué diferencia hay con el anterior que el primero proceso ha tardado demasiado :)
+
+```java
+import java.util.concurrent.TimeUnit;
+
+public class esperapr {
+    public static void main(String[] args) {
+        try {
+            ProcessBuilder pb1 = new ProcessBuilder("ping", "google.com");
+            ProcessBuilder pb2 = new ProcessBuilder("ping", "yahoo.com");
+
+            Process p1 = pb1.start();
+            Process p2 = pb2.start();
+
+            // Esperar un máximo de 5 segundos para que el proceso 1 termine
+            if (p1.waitFor(1, TimeUnit.SECONDS)) {
+                System.out.println("El proceso 5 terminó a tiempo.");
+            } else {
+                System.out.println("El proceso 1 tardó demasiado.");
+            }
+
+            // Esperar un máximo de 5 segundos para que el proceso 2 termine
+            if (p2.waitFor(5, TimeUnit.SECONDS)) {
+                System.out.println("El proceso 2 terminó a tiempo.");
+            } else {
+                System.out.println("El proceso 2 tardó demasiado.");
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
