--- a/20240926.md
+++ b/20240926.md
@@ -33,10 +33,7 @@ public class ejemplo1 {
         } catch (Exception e) {
             e.printStackTrace();
         }
-
-    }
-       
-
+    }     
 }
 ```
 
@@ -159,4 +156,27 @@ public class esperapr {
     }
 }
 ```
+
+### Redirijir la salida de los procesoso a un ficheor tanto salida estándar como la de error.
+
+haz un  programa que lance cualquier proceso y que la salida del proceso quede guardarda en output.txt
+
+Puedes utilizar un comando del sistema como el del otro día:
+
+```java
+
+// 2ª forma: usando un array de cadenas. Funciona con parámetros
+String[] command2 = {"cmd", "/c", "dir", "/o"};
+ProcessBuilder pb = new ProcessBuilder(command2);
+```
+
+Este código es el que redirije.
+
+```java
+
+processBuilder.redirectOutput(new File("output.txt"));
+processBuilder.redirectErrorStream(true); // Combina stdout y stderr
+Process process = processBuilder.start();
+```
+
 
