--- a/20240926.md
+++ b/20240926.md
@@ -179,4 +179,67 @@ processBuilder.redirectErrorStream(true); // Combina stdout y stderr
 Process process = processBuilder.start();
 ```
 
+### PIPE o redirección de comandos
+
+Con esta técnica la salida de un  comando la redirijo a la entrada de otro comando para que la información la tenga en cuenta. De ese modo puedo realizar tareas más complejas
+
+```java
+ProcessBuilder pb1 = new ProcessBuilder("echo", "Hola");
+Process p1 = pb1.start();
+
+ProcessBuilder pb2 = new ProcessBuilder("grep", "Hola");
+pb2.redirectInput(p1.getInputStream());
+Process p2 = pb2.start();
+```
+
+# EJERCICIOS
+
+## 1. Crea un programa en python y lanzalo desde java
+## 2. Lanzar un powershell. Crea el fichero procesos.ps1 y luego crea un programa en java para lanzar el powershell, la salida tiene que salir a un proceso llamado salida.txt
+
+```powershell
+Get-Process pwsh | Format-Table `
+    @{Label = "NPM(K)"; Expression = {[int]($_.NPM / 1024)}},
+    @{Label = "PM(K)"; Expression = {[int]($_.PM / 1024)}},
+    @{Label = "WS(K)"; Expression = {[int]($_.WS / 1024)}},
+    @{Label = "VM(M)"; Expression = {[int]($_.VM / 1MB)}},
+    @{Label = "CPU(s)"; Expression = {if ($_.CPU) {$_.CPU.ToString("N")}}},
+    Id, ProcessName, StartTime -AutoSi
+```
+
+## 3. Crea un programa en java que lance este powershell que envía un mensaje a un bot
+
+* Tienes que crear un bot en telegram
+https://docs.radist.online/docs/v/espanol-1/productos-1/radist-web/conexiones/telegram-bot/instrucciones-para-crear-y-configurar-un-bot-en-botfather
+
+Una vez que tienes el nuevo bot te dará el token del bot
+
+* Obtener el chatID
+https://origendata.com/2023/05/15/como-obtener-el-id-de-un-chat-de-telegram-para-un-bot-usando-getidsbot/#:~:text=Abre%20la%20aplicaci%C3%B3n%20de%20Telegram,el%20ID%20de%20cualquier%20chat.
+
+Este código es el que envía la información al bot
+
+```Powershell
+
+[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
+
+$botToken = "Your token" 
+$chatID = "Your chat id" 
+$messageText = "Test massage" 
+
+$url = "https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
+
+Invoke-RestMethod -Uri $url -Method Post
+```
+
+### Crea el programa java que lance un mensaje al bot
+
+### Variante, lanza en tu programa java un comando y la salida la añades aun Bufferreader de modo que vas leyendo y enviando al bot de telegram la salida del comando. 
+
+### A tener en cuenta: 
+Ejemplo de cómo pasar parámetros al powershelll el $messageText que es la variable donde almacena el mensaje a enviar lo tendremos que parametrizarlo para enviar parámetros
+Os pongo un enlace de mi amigo @jesusninoc. Por cierto, acaba de publicar un libro muy interesante de PowerShell en Amazon.
+https://www.jesusninoc.com/02/17/pasar-parametros-en-scripts-de-powershell/
+
+Este ejercicio es muy completo y verás como lanzar multiples procesos desde JAVA para realizar diferentes acciones.
 
