--- a/20241003.md
+++ b/20241003.md
@@ -1,7 +1,7 @@
 # TEMA: PROCESOS
 ## COMUNICACIÓN ENTRE PROCESOS
 
-### Uso de streams en java 
+### Ejemplo de streams en java para entrada de datos 
 
 ```java
 public class Streams {
@@ -23,5 +23,7 @@ public class Streams {
     }
 }
 ´´´
+
+### Ejercicio 1. Crea una clase StreamSalida que lea un fichero y nos lo muestre nuestra clase java utilizando Stream de salida
 
 
