--- a/20241003.md
+++ b/20241003.md
@@ -26,4 +26,31 @@ public class Streams {
 
 ### Ejercicio 1. Crea una clase StreamSalida que lea un fichero y nos lo muestre nuestra clase java utilizando Stream de salida
 
+```java
+public class StreamSalida {
+    public static void main (String[] args) {
 
+        File f = new File ("C:\\Users\\briof\\Downloads\\readme2.md");
+        try {
+            FileInputStream fis = new FileInputStream(f);
+            
+            // Reads the first byte
+            int i = fis.read();
+
+        while(i != -1) {
+            System.out.print((char)i);
+            // Reads next byte from the file
+            i = fis.read();
+         }
+         fis.close();
+
+        } catch (IOException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+        
+        
+    }
+
+}
+```
