--- a/20241008.md
+++ b/20241008.md
@@ -18,8 +18,6 @@
   * El Programa en java en Ejericio_1_tunombre_procesos.java en Github
   * Subirlo a la tarea de Teams correspondiente el enlace del github donde se vean los ejercicios.
 
----
-
 ## Ejercicio 2: Listar archivos en un directorio
 
 Ejecutar un comando que liste los archivos de un directorio y mostrar el resultado en la consola.
@@ -39,8 +37,6 @@ Usa ProcessBuilder.directory() para cambiar el directorio de trabajo del proceso
   * El Programa en java en Ejericio_2_tunombre_procesos.java en Github
   * Subirlo a la tarea de Teams correspondiente el enlace del github donde se vean los ejercicios.
 
----
-
 ## Ejercicio 3: Ejecutar un programa externo
 Ejecutar una aplicación externa desde Java.
 
@@ -57,8 +53,6 @@ Ejecutar una aplicación externa desde Java.
   * El Programa en java en Ejericio_3_tunombre_procesos.java en Github
   * Subirlo a la tarea de Teams correspondiente el enlace del github donde se vean los ejercicios.
 
----
-
 ## Ejercicio 4: Redirigir la salida a un archivo
 Objetivo: Crear un proceso que redirija la salida de un comando a un archivo.
 
@@ -74,3 +68,4 @@ Usa ProcessBuilder.redirectOutput() para redirigir la salida del proceso a un ar
 #### Entrega:
   * El Programa en java en Ejericio_4_tunombre_procesos.java en Github
   * Subirlo a la tarea de Teams correspondiente el enlace del github donde se vean los ejercicios.
+  * Redirect está en el fichero 20241002.md
