--- a/20241008.md
+++ b/20241008.md
@@ -1,4 +1,78 @@
-# Ejercicios de ProcessBuilder. Como los del examen.
+# Ejercicios de ProcessBuilder.
+
+## Ejemplo sencillo de Processbuilder que habre un notepad desde una clase Java
+
+```java
+import java.io.IOException;
+
+public class ProcessBuilderNotepadExample {
+
+    public static void main(String[] args) {
+        // Crea el proceso para abrir Notepad
+        ProcessBuilder processBuilder = new ProcessBuilder("notepad.exe");
+
+        try {
+            // Inicia el proceso
+            Process process = processBuilder.start();
+
+            // Espera a que el proceso termine
+            int exitCode = process.waitFor();
+            System.out.println("Notepad cerrado con código de salida: " + exitCode);
+
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+* La clase encargada de creación de procesos en Java es **ProcessBuilder**
+* Usamos **processBuilder.start()** para iniciar el proceso de abrir Notepad.
+* Esperar el cierre de Notepad: El programa espera a que el usuario cierre Notepad y luego imprime el código de salida (normalmente 0 si todo fue correcto). **wait**.
+
+## ejemplo sencillo que lanza un comando del sistema operativo.
+En este ejemplo lanzamos un dir para ver el resultado tenemos que conectar la salida a un outputstream
+ya que la salida de este comando la realiza por consola.
+
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.io.IOException;
+
+public class ProcessBuilderExampleWindows {
+
+    public static void main(String[] args) {
+        // Crea el proceso para ejecutar el comando "dir"
+        ProcessBuilder processBuilder = new ProcessBuilder();
+        
+        // El comando para Windows debe ser "cmd.exe" con el argumento "/c" seguido de "dir"
+        processBuilder.command("cmd.exe", "/c", "dir");
+
+        try {
+            // Inicia el proceso
+            Process process = processBuilder.start();
+            
+            // Captura la salida del proceso
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String line;
+            
+            // Imprime cada línea de la salida
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line);
+            }
+
+            // Espera a que el proceso termine y obtiene el código de salida
+            int exitCode = process.waitFor();
+            System.out.println("\nEl proceso terminó con el código: " + exitCode);
+
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+# Ejercicios de examen.
 
 ## Ejercicio 1: Ejecutar un comando simple
  Crear un programa en Java que utilice ProcessBuilder para ejecutar un comando simple del sistema operativo.
