--- a/20241008.md
+++ b/20241008.md
@@ -1,5 +1,9 @@
 # Ejercicios de ProcessBuilder.
 
+En la clase anterior comentamos si antes de realizar los ejercicios de examen podríamos antes ver algún ejemplo.
+Os dejo un par de ejemplos sencillo el resto lo tenéis en las clases anteriores para repasar. Después os dejo
+ejercicios para entregar que serán como los de la prueba para esta unidad.
+
 ## Ejemplo sencillo de Processbuilder que habre un notepad desde una clase Java
 
 ```java
