--- a/20241008.md
+++ b/20241008.md
@@ -127,6 +127,8 @@ Ejecutar una aplicación externa desde Java.
 * Usa ProcessBuilder para lanzar la aplicación.
 * No es necesario capturar la salida en este ejercicio.
 
+### Variante: Obtener información del proceso ejecutado con process y processhandler ver la clase [20240926.md]
+
 #### Entrega:
   * El Programa en java en Ejericio_3_tunombre_procesos.java en Github
   * Subirlo a la tarea de Teams correspondiente el enlace del github donde se vean los ejercicios.
