--- a/20241010.md
+++ b/20241010.md
@@ -7,3 +7,67 @@ a inyección de código en aplicaciones que usan ProcessBuilder es un riesgo cua
 
 Cómo puede ocurrir la inyección de código
 Cuando utilizas ProcessBuilder en Java para ejecutar comandos del sistema operativo, si alguna parte del comando proviene de una fuente externa (como una entrada del usuario), podría ser manipulada para ejecutar comandos no previstos. Esto sucede especialmente si el comando se construye mediante concatenación de strings, lo que puede permitir a un atacante incluir su propio comando dentro de la entrada.
+
+## Ejemplo Vulnerable en Windows
+En este ejemplo, se puede ver cómo concatenar la entrada del usuario en un comando de Windows (como cmd.exe) puede dar lugar a una inyección de código:
+
+```java
+import java.io.IOException;
+
+public class CodeInjectionExampleWindows {
+    public static void main(String[] args) throws IOException {
+        // Supongamos que este argumento proviene de una entrada del usuario
+        String userInput = args[0];
+
+        // Vulnerable: el input del usuario se concatena directamente en el comando
+        ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/c", "echo " + userInput);
+        processBuilder.start();
+    }
+}
+```
+Argumento que pasamos al java java CodeInjectionExampleWindows &dir
+
+```bash
+& dir
+```
+
+#### Solución:
+Que la variable userInput sea tratado como un argumento literal y se hace así
+
+ ```
+import java.io.IOException;
+
+public class SafeProcessBuilderExampleWindows {
+    public static void main(String[] args) throws IOException {
+        // Supongamos que este argumento proviene de una entrada del usuario
+        String userInput = args[0];
+
+        // Seguro: separamos los argumentos correctamente
+        ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/c", "echo", userInput);
+        processBuilder.start();
+    }
+}
+ ```
+
+Prueba y verás que no se puede inyectar código.
+
+## Otras consideraciones
+
+1. Validación y saneamiento de entradas: Siempre valida y limpia las entradas del usuario. Puedes implementar una función que elimine o escape caracteres especiales que puedan ser usados para inyección de comandos.
+
+```java
+public static String sanitizeInput(String input) {
+    return input.replaceAll("[&|<>^]", "");
+}
+```
+2. Uso de APIs de Java en lugar de comandos del sistema: Siempre que sea posible, utiliza las funcionalidades proporcionadas por Java en lugar de ejecutar comandos del sistema operativo. Por ejemplo, para copiar archivos, utiliza las clases de E/S de Java en lugar de comandos como copy o xcopy.
+
+3. Principio de menor privilegio: Ejecuta tu aplicación con los mínimos privilegios necesarios. Esto limita el impacto potencial si ocurre una inyección de código.
+
+4. Evita el uso de cmd.exe si no es necesario: Si puedes ejecutar el programa directamente sin invocar cmd.exe, hazlo. Por ejemplo, si deseas listar el contenido de un directorio, en lugar de usar cmd.exe /c dir, utiliza las APIs de Java.
+
+### Ejercicio haz un resumen de los puntos a tener en cuenta en un canva a modo de infografía
+
+
+
+
