--- a/20240926.md
+++ b/20240926.md
@@ -198,7 +198,7 @@ Process p2 = pb2.start();
 ## 2. Lanzar un powershell. Crea el fichero procesos.ps1 y luego crea un programa en java para lanzar el powershell, la salida tiene que salir a un proceso llamado salida.txt
 
 ```powershell
-Get-Process pwsh | Format-Table `
+Get-Process | Format-Table `
     @{Label = "NPM(K)"; Expression = {[int]($_.NPM / 1024)}},
     @{Label = "PM(K)"; Expression = {[int]($_.PM / 1024)}},
     @{Label = "WS(K)"; Expression = {[int]($_.WS / 1024)}},
