--- a/20240926.md
+++ b/20240926.md
@@ -207,7 +207,7 @@ Get-Process | Format-Table `
     Id, ProcessName, StartTime -AutoSi
 ```
 
-## 3. Crea un programa en java que lance este powershell que envía un mensaje a un bot
+## 3. Crea un programa en java que lance este powershell que envía un mensaje a un bot (opcional)
 
 * Tienes que crear un bot en telegram
 https://docs.radist.online/docs/v/espanol-1/productos-1/radist-web/conexiones/telegram-bot/instrucciones-para-crear-y-configurar-un-bot-en-botfather
