--- a/20241017.md
+++ b/20241017.md
@@ -27,4 +27,27 @@ Además los procesos cuando se crean los tiene otro proceso
 * Automatizar cosas; ejecutar procesos uno detrás de otro.
 * Interactuar con el sistema operativo
 
+```java
+import java.io.IOException;
+
+public class lanzadorProcesos {
+    public static void main (String args[]) {
+        ProcessBuilder pb = new ProcessBuilder("notepad");
+        try {
+            pb.start();
+        }catch (IOException e) {
+            e.printStackTrace();
+        }
+
+    }
+}
+
+```
+
+## Ejercicio 1. Ahora crea un programa que lance otro proceso (comando, una aplicación, algo ejecute, un binario, ejecutable, script....)
+
+```java
+
+```
+
   
