--- a/20241017.md
+++ b/20241017.md
@@ -50,4 +50,43 @@ public class lanzadorProcesos {
 
 ```
 
+# Capturar la salida del proceso.
+
+
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.io.IOException;
+
+public class lanzadorProcesos {
+    public static void main (String args[]) {
+        ProcessBuilder pb = new ProcessBuilder("cmd" ,"/c", "echo hola que ase!!");
+        try {
+            Process process = pb.start();
+            BufferedReader buffer = new BufferedReader
+                    (new InputStreamReader(process.getInputStream()));
+
+            String linea;
+            while ((linea = buffer.readLine()) != null) {
+                System.out.println(linea);
+            }
+
+
+        }catch (IOException e) {
+            e.printStackTrace();
+        }
+
+    }
+}
+
+```
+
+### Ejercicio2
+
+Crea un programa que cuente el numero de lineas de código de un archivo java. El comando que lee líneas es find /c /v "" archivo.java
+
+solución
+```java
+
+```
   
