--- a/20241017.md
+++ b/20241017.md
@@ -90,3 +90,47 @@ solución
 
 ```
   
+### Ejemplo: Lanzar e interactuar con un programa en python
+
+
+```python
+import random
+print(random.randint(1, 100))
+```
+```java
+
+import java.io.*;
+import java.util.Scanner;
+
+public class JuegoAdivinanza {
+    public static void main(String[] args) {
+        ProcessBuilder pb = new ProcessBuilder("python", "generador.py");
+        try {
+            Process proceso = pb.start();
+
+            BufferedReader reader = new BufferedReader(new InputStreamReader(proceso.getInputStream()));
+            String numeroGenerado = reader.readLine();
+            int numeroSecreto = Integer.parseInt(numeroGenerado);
+
+            Scanner scanner = new Scanner(System.in);
+            int intento = 0;
+            System.out.println("Adivina el número entre 1 y 100:");
+
+            while (intento != numeroSecreto) {
+                intento = scanner.nextInt();
+                if (intento < numeroSecreto) {
+                    System.out.println("El número es mayor.");
+                } else if (intento > numeroSecreto) {
+                    System.out.println("El número es menor.");
+                } else {
+                    System.out.println("¡Felicidades! Has adivinado el número.");
+                }
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+
