--- a/20241017.md
+++ b/20241017.md
@@ -92,11 +92,13 @@ solución
   
 ### Ejemplo: Lanzar e interactuar con un programa en python
 
-
+El fichero python
 ```python
 import random
 print(random.randint(1, 100))
 ```
+
+El java que lanza en python e interactua
 ```java
 
 import java.io.*;
