--- a/20241017.md
+++ b/20241017.md
@@ -134,5 +134,59 @@ public class JuegoAdivinanza {
     }
 }
 ```
+## Ejemplo 4: BotChat en python y el programa java interactúa con el bot
 
+El python
+```python
+import sys
 
+for line in sys.stdin:
+    mensaje = line.strip().lower()
+    if mensaje == "hola":
+        print("¡Hola! ¿Cómo estás?")
+    elif mensaje == "adiós":
+        print("¡Hasta luego!")
+        break
+    else:
+        print("No entiendo tu mensaje.")
+    sys.stdout.flush()
+```
+
+```java
+import java.io.*;
+import java.util.Scanner;
+
+public class ChatBot {
+    public static void main(String[] args) {
+        ProcessBuilder pb = new ProcessBuilder("python", "chatbot.py");
+        try {
+            Process proceso = pb.start();
+
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(proceso.getOutputStream()));
+            BufferedReader reader = new BufferedReader(new InputStreamReader(proceso.getInputStream()));
+
+            Scanner scanner = new Scanner(System.in);
+            String mensajeUsuario;
+
+            System.out.println("Inicia conversación con el chat bot (escribe 'adiós' para salir):");
+            while (true) {
+                System.out.print("Tú: ");
+                mensajeUsuario = scanner.nextLine();
+                writer.write(mensajeUsuario + "\n");
+                writer.flush();
+
+                String respuesta = reader.readLine();
+                System.out.println("Bot: " + respuesta);
+
+                if (mensajeUsuario.equalsIgnoreCase("adiós")) {
+                    break;
+                }
+            }
+
+            proceso.destroy();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
