--- a/20241030.md
+++ b/20241030.md
@@ -45,7 +45,47 @@ public synchronized void incrementar() {
 }
 ```
 
-la palabra reservada synchronized obliga a qué solo un solo hilo sea capaz de entrar en el método
+la palabra reservada synchronized obliga a qué solo un solo hilo sea capaz de entrar en el método.
+
+Mejor explicado:
+
+En Java, synchronized es una palabra clave que se utiliza para controlar el acceso a un bloque de código o a un método por parte de múltiples hilos. Garantiza que solo un hilo pueda ejecutar el código sincronizado en un momento dado, evitando así condiciones de carrera y asegurando la consistencia de los datos compartidos.
+
+Puede ser a nivel de:
+* Métodos de instancia sincronizados
+* Bloques sincronizados:
+* Métodos estáticos sincronizados:
+
+Es más eficiente crear bloques sincronizados
+
+#### Objetos de bloqueo personalizados:
+
+También puedes usar un objeto separado para sincronizar, lo que te da más control:
+
+```java
+private final Object lock = new Object();
+
+public void incrementar() {
+    synchronized(lock) {
+        contador++;
+    }
+}
+
+```
+### Otras alternativas.
+AtomicInteger
+
+Ejercicio:
+
+Cambia la declaración de contador a AtomicInteger
+```java
+private AtomicInteger contador = new AtomicInteger(0);
+```
+1. Modifica el método incrementar() para utilizar incrementAndGet().
+2. Ajusta el código donde se imprime el valor final del contador.
+3. Explica por qué AtomicInteger resuelve el problema de la condición de carrera sin necesidad de synchronized.
+
+
 
 
 
