--- a/20241030.md
+++ b/20241030.md
@@ -85,8 +85,43 @@ private AtomicInteger contador = new AtomicInteger(0);
 2. Ajusta el código donde se imprime el valor final del contador.
 3. Explica por qué AtomicInteger resuelve el problema de la condición de carrera sin necesidad de synchronized.
 
+# Ejemplo
 
+```java
+public class Cola {
+    private int[] buffer;
+    private int capacidad;
+    private int count = 0;
+    private int in = 0;
+    private int out = 0;
 
+    public Cola(int capacidad) {
+        this.capacidad = capacidad;
+        buffer = new int[capacidad];
+    }
+
+    public synchronized void put(int valor) throws InterruptedException {
+        while (count == capacidad) {
+            wait();
+        }
+        buffer[in] = valor;
+        in = (in + 1) % capacidad;
+        count++;
+        notifyAll();
+    }
+
+    public synchronized int take() throws InterruptedException {
+        while (count == 0) {
+            wait();
+        }
+        int valor = buffer[out];
+        out = (out + 1) % capacidad;
+        count--;
+        notifyAll();
+        return valor;
+    }
+}
+```
 
 
 
