--- a/20241030.md
+++ b/20241030.md
@@ -173,4 +173,19 @@ public class Consumidor implements Runnable {
 }
 ```
 
+### programa principal
+
+```java
+public class ProductorConsumidorDemo {
+    public static void main(String[] args) {
+        Cola cola = new Cola(5);
+        Thread productorThread = new Thread(new Productor(cola));
+        Thread consumidorThread = new Thread(new Consumidor(cola));
+
+        productorThread.start();
+        consumidorThread.start();
+    }
+}
+
+```
 
