--- a/20241106.md
+++ b/20241106.md
@@ -2,6 +2,7 @@
 
 ```java
 
+
 class Filosofo extends Thread {
    private int id;
    private Tenedor tenedorIzquierdo;
@@ -15,12 +16,16 @@ class Filosofo extends Thread {
 
    @Override
    public void run() {
-      while (true){
-         pensar();
-         tomarTenedores();
-         comer();
-         soltarTenedores();
-      } 
+      try {
+         while (true){
+            pensar();
+            tomarTenedores();
+            comer();
+            soltarTenedores();
+         } 
+      } catch (InterruptedException e){
+         e.printStackTrace();
+      }
    }
 
    private void pensar() throws InterruptedException {
@@ -63,11 +68,17 @@ public class Filosofo_deadlock{
       }
 
       for (int i=0; i<5; i++) {
-         filosofos[i] = new Filosofo(i, null, null)
+         Tenedor tenedorIzquierdo = tenedores[i];
+         Tenedor tenedorDerecho = tenedores [(i+1)%5];
+         
+         filosofos[i] = new Filosofo(i, tenedorIzquierdo, tenedorDerecho);
+         filosofos[i].start();
       }
    }
 
 }
+
+
 
 
 ```
