--- a/20241107.md
+++ b/20241107.md
@@ -85,3 +85,78 @@ public class Tank implements Runnable {
     }
 }
 ```
+## BATTLEFIELD
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+
+public class Battlefield {
+    private List<Tank> tanks;
+    private boolean gameRunning;
+
+    public Battlefield() {
+        tanks = new ArrayList<>();
+        gameRunning = true;
+    }
+
+    public synchronized void addTank(Tank tank) {
+        tanks.add(tank);
+    }
+
+    public synchronized void removeTank(Tank tank) {
+        tanks.remove(tank);
+        if (tanks.size() <= 1) {
+            gameRunning = false;
+            System.out.println("El juego ha terminado.");
+        }
+    }
+
+    public synchronized List<Tank> getTanks() {
+        return new ArrayList<>(tanks);
+    }
+
+    public boolean isGameRunning() {
+        return gameRunning;
+    }
+}
+```
+## JUEGO
+
+```java
+public class Juego {
+    public static void main(String[] args) {
+        Battlefield battlefield = new Battlefield();
+
+        // Crear tanques
+        Tank tank1 = new Tank("Tanque 1", battlefield);
+        Tank tank2 = new Tank("Tanque 2", battlefield);
+        Tank tank3 = new Tank("Tanque 3", battlefield);
+
+        // Añadir tanques al campo de batalla
+        battlefield.addTank(tank1);
+        battlefield.addTank(tank2);
+        battlefield.addTank(tank3);
+
+        // Iniciar hilos
+        Thread t1 = new Thread(tank1);
+        Thread t2 = new Thread(tank2);
+        Thread t3 = new Thread(tank3);
+
+        t1.start();
+        t2.start();
+        t3.start();
+
+        // Esperar a que termine el juego
+        while (battlefield.isGameRunning()) {
+            try {
+                Thread.sleep(500);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+
+        System.out.println("Fin del juego.");
+    }
+
+```
