--- a/20241024.md
+++ b/20241024.md
@@ -1,7 +1,53 @@
 # TEMA 2 HILOS
 
+En java los hilos se pueden implementar de dos maneras diferentes
+
 Ejemplo de hilos en java
 
-```java
+Extendiendo de Thread
 
+```java
+public class MiHilo extends Thread {
+    @Override
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println("Hilo: " + i);
+            try {
+                Thread.sleep(1000); // Pausa de 1 segundo
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                System.out.println("Hilo interrumpido");
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        MiHilo hilo = new MiHilo();
+        hilo.start(); // Inicia el hilo
+    }
+}
+```
+
+Implementado Interfaz Runnable
+
+```java
+public class MiRunnable implements Runnable {
+    @Override
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println("Hilo: " + i);
+            try {
+                Thread.sleep(1000); // Pausa de 1 segundo
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                System.out.println("Hilo interrumpido");
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        Thread hilo = new Thread(new MiRunnable());
+        hilo.start(); // Inicia el hilo
+    }
+}
 ```
