--- a/20241129.md
+++ b/20241129.md
@@ -2,3 +2,9 @@
 Crea una clase Contador con un método incrementar() que aumenta un contador global.
 Crea 3 hilos que llamen a este método 100 veces cada uno.
 Sincroniza el método incrementar() para que el contador no tenga resultados incorrectos.
+
+# PROBLEMA 2
+* Crea una clase Buffer con un solo valor.
+* Un hilo productor agrega un valor al buffer, pero debe esperar si ya tiene uno.
+* Un hilo consumidor lee el valor del buffer, pero debe esperar si está vacío.
+
