--- a/20241129.md
+++ b/20241129.md
@@ -1,7 +1,7 @@
 # PROBLEMA
-Crea una clase Contador con un método incrementar() que aumenta un contador global.
-Crea 3 hilos que llamen a este método 100 veces cada uno.
-Sincroniza el método incrementar() para que el contador no tenga resultados incorrectos.
+* Crea una clase Contador con un método incrementar() que aumenta un contador global.
+* Crea 3 hilos que llamen a este método 100 veces cada uno.
+* Sincroniza el método incrementar() para que el contador no tenga resultados incorrectos.
 
 # PROBLEMA 2
 * Crea una clase Buffer con un solo valor.
