--- a/20241130_resumen.md
+++ b/20241130_resumen.md
@@ -4,19 +4,21 @@
 
 Crear una Clase que Extienda o Implemente
    - Opción 1: Extender `Thread`
+```java
        class MiHilo extends Thread {
            public void run() {
                // Código que ejecutará el hilo
            }
        }
-
+```
    - Opción 2: Implementar `Runnable`
+```java
        class MiHilo implements Runnable {
            public void run() {
                // Código que ejecutará el hilo
            }
        }
-   
+```   
    [ Extender = Simplicidad, Implementar = Flexibilidad ]
 
 ### Crear una Instancia del Hilo
