--- a/20241130_resumen.md
+++ b/20241130_resumen.md
@@ -65,3 +65,219 @@ Ejemplo
    - sleep(ms): Pausa el hilo por el tiempo especificado.
    - join(): Espera a que el hilo termine.
    - isAlive(): Verifica si el hilo sigue activo.
+
+¡Claro! Aquí tienes una explicación detallada de los métodos más importantes relacionados con la sincronización y la gestión de hilos en Java, como `wait`, `notify`, y `notifyAll`, junto con otros conceptos útiles:
+
+---
+
+### **1. Métodos de la Clase Object: `wait`, `notify`, `notifyAll`**
+
+Estos métodos se utilizan para la **comunicación entre hilos** y están disponibles en la clase `Object`, ya que todos los objetos en Java heredan de esta clase.
+
+#### **`wait()`**
+- **Qué hace:** 
+   - Detiene el hilo actual hasta que otro hilo llame a `notify()` o `notifyAll()` en el mismo objeto de monitor (el objeto que está siendo sincronizado).
+   - Solo puede ser llamado dentro de un bloque sincronizado o un método sincronizado.
+- **Ejemplo:**  
+   ```java
+   synchronized(objeto) {
+       objeto.wait();
+   }
+   ```
+
+- **Resultado:** El hilo que llama a `wait()` entra en el estado de espera y libera el bloqueo del objeto.
+
+---
+
+#### **`notify()`**
+- **Qué hace:** 
+   - Despierta a un hilo que esté esperando en el monitor del objeto sincronizado. 
+   - Si hay varios hilos esperando, se elige uno arbitrariamente.
+- **Ejemplo:**  
+   ```java
+   synchronized(objeto) {
+       objeto.notify();
+   }
+   ```
+
+---
+
+#### **`notifyAll()`**
+- **Qué hace:** 
+   - Despierta a todos los hilos que estén esperando en el monitor del objeto sincronizado. 
+   - Todos los hilos competiran por el bloqueo.
+- **Ejemplo:**  
+   ```java
+   synchronized(objeto) {
+       objeto.notifyAll();
+   }
+   ```
+
+---
+
+#### **Ejemplo Combinado de `wait` y `notify`**
+```java
+class Buffer {
+    private int contenido;
+    private boolean disponible = false;
+
+    public synchronized void producir(int valor) throws InterruptedException {
+        while (disponible) {
+            wait(); // Espera si el buffer está lleno
+        }
+        contenido = valor;
+        disponible = true;
+        System.out.println("Producido: " + valor);
+        notify(); // Notifica al consumidor
+    }
+
+    public synchronized int consumir() throws InterruptedException {
+        while (!disponible) {
+            wait(); // Espera si el buffer está vacío
+        }
+        disponible = false;
+        System.out.println("Consumido: " + contenido);
+        notify(); // Notifica al productor
+        return contenido;
+    }
+}
+```
+
+---
+
+### **Métodos Relacionados con los Hilos (Clase `Thread`)**
+
+#### **`start()`**
+- Inicia la ejecución de un hilo.
+- Crea un nuevo hilo de ejecución en paralelo.
+
+#### **`run()`**
+- Define el código que ejecutará el hilo. 
+- **No se debe llamar directamente para iniciar un hilo paralelo.** Se ejecuta automáticamente cuando usas `start()`.
+
+#### **`sleep(long ms)`**
+- Detiene el hilo actual durante el número de milisegundos especificado.
+- **Ejemplo:**
+   ```java
+   Thread.sleep(1000); // Pausa el hilo por 1 segundo
+   ```
+
+---
+
+#### **`join()`**
+- Hace que el hilo actual espere a que otro hilo termine su ejecución.
+- **Ejemplo:**
+   ```java
+   hilo.join(); // Espera a que `hilo` termine
+   ```
+
+---
+
+#### **`isAlive()`**
+- Devuelve `true` si el hilo sigue en ejecución, `false` si ha terminado.
+- **Ejemplo:**
+   ```java
+   if (hilo.isAlive()) {
+       System.out.println("El hilo sigue en ejecución");
+   }
+   ```
+
+---
+
+#### **`interrupt()`**
+- Interrumpe un hilo, generalmente para indicarle que detenga su ejecución.  
+- Debes manejar la excepción `InterruptedException` en el hilo que interrumpas.
+- **Ejemplo:**
+   ```java
+   hilo.interrupt();
+   ```
+
+---
+
+#### **`yield()`**
+- Sugiere al planificador de hilos que pase la CPU a otros hilos de igual prioridad. No garantiza nada.
+- **Ejemplo:**
+   ```java
+   Thread.yield();
+   ```
+
+---
+
+### **3. Bloques y Métodos Sincronizados**
+
+#### **`synchronized`**
+- Asegura que un solo hilo pueda acceder al código sincronizado a la vez.
+- **Bloque sincronizado:**  
+   ```java
+   synchronized(objeto) {
+       // Código sincronizado
+   }
+   ```
+
+- **Método sincronizado:**  
+   ```java
+   public synchronized void metodoSincronizado() {
+       // Código sincronizado
+   }
+   ```
+
+---
+
+### **4. Ejemplo Completo: Productor-Consumidor con `wait` y `notify`**
+```java
+class Buffer {
+    private int contenido;
+    private boolean lleno = false;
+
+    public synchronized void producir(int valor) throws InterruptedException {
+        while (lleno) {
+            wait(); // Espera si el buffer está lleno
+        }
+        contenido = valor;
+        lleno = true;
+        System.out.println("Producido: " + valor);
+        notify(); // Notifica al consumidor
+    }
+
+    public synchronized int consumir() throws InterruptedException {
+        while (!lleno) {
+            wait(); // Espera si el buffer está vacío
+        }
+        lleno = false;
+        System.out.println("Consumido: " + contenido);
+        notify(); // Notifica al productor
+        return contenido;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Buffer buffer = new Buffer();
+
+        Thread productor = new Thread(() -> {
+            try {
+                for (int i = 0; i < 5; i++) {
+                    buffer.producir(i);
+                    Thread.sleep(500);
+                }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        });
+
+        Thread consumidor = new Thread(() -> {
+            try {
+                for (int i = 0; i < 5; i++) {
+                    buffer.consumir();
+                    Thread.sleep(1000);
+                }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        });
+
+        productor.start();
+        consumidor.start();
+    }
+}
+```
