--- a/20241130_resumen.md
+++ b/20241130_resumen.md
@@ -68,9 +68,8 @@ Ejemplo
 
 ¡Claro! Aquí tienes una explicación detallada de los métodos más importantes relacionados con la sincronización y la gestión de hilos en Java, como `wait`, `notify`, y `notifyAll`, junto con otros conceptos útiles:
 
----
 
-### **1. Métodos de la Clase Object: `wait`, `notify`, `notifyAll`**
+### **Métodos de la Clase Object: `wait`, `notify`, `notifyAll`**
 
 Estos métodos se utilizan para la **comunicación entre hilos** y están disponibles en la clase `Object`, ya que todos los objetos en Java heredan de esta clase.
 
