--- a/20241211.md
+++ b/20241211.md
@@ -2,6 +2,16 @@
 
 ## CLASE 3
 
+## ¿Qué es un socket?
+
+Basicamente lo podemos definir como un mecanismo de comunicación entre procesos, generalmente a través de una red.
+
+Un socket es un punto final de una conexión entre dos sistemas en una red. Permiten que dos programas (en diferentes dispositivos o en el mismo dispositivo) se comuniquen entre sí. Usualmente, los sockets se basan en los protocolos TCP/IP o UDP.
+
+### Características principales:
+Dirección IP: Identifica el dispositivo en la red.
+Puerto: Identifica la aplicación o servicio en el dispositivo.
+Protocolo: Define cómo se gestionará la comunicación (TCP o UDP).
 
 #### Ejercicio de repaso de sockets
 
